@@ -772,23 +772,24 @@ function utilities_view_logfile() {
 		if ((!$host_start) && (!$ds_start)) {
 			$new_item = $item;
 		}else{
-			if ($host_start) {
-				$host_end = strpos($item, "]", $host_start);
-				$host_id = substr($item, $host_start+5, $host_end-($host_start+5));
-				$new_item = $new_item . substr($item, 0, $host_start + 5) . "<a href='host.php?action=edit&id=" . $host_id . "'>" . substr($item, $host_start + 5, $host_end-($host_start + 5)) . "</a>";
-				$item = substr($item, $host_end);
+			while ($host_start) {
+				$host_end   = strpos($item, "]", $host_start);
+				$host_id    = substr($item, $host_start+5, $host_end-($host_start+5));
+				$new_item   = $new_item . substr($item, 0, $host_start + 5) . "<a href='host.php?action=edit&id=" . $host_id . "'>" . substr($item, $host_start + 5, $host_end-($host_start + 5)) . "</a>";
+				$item       = substr($item, $host_end);
+				$host_start = strpos($item, "Host[");
 			}
 
 			$ds_start = strpos($item, "DS[");
-			if ($ds_start) {
+			while ($ds_start) {
 				$ds_end   = strpos($item, "]", $ds_start);
 				$ds_id    = substr($item, $ds_start+3, $ds_end-($ds_start+3));
 				$new_item = $new_item . substr($item, 0, $ds_start + 3) . "<a href='data_sources.php?action=ds_edit&id=" . $ds_id . "'>" . substr($item, $ds_start + 3, $ds_end-($ds_start + 3)) . "</a>";
 				$item     = substr($item, $ds_end);
-				$new_item = $new_item . $item;
-			}else{
-				$new_item = $new_item . $item;
+				$ds_start = strpos($item, "DS[");
 			}
+
+			$new_item = $new_item . $item;
 		}
 
 		/* get the background color */
